2017-07-26  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_ATE_UCS and DW_ATE_ASCII.

2017-07-25  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_TAG_coarray_type, DW_TAG_generic_subrange,
	DW_TAG_dynamic_type, DW_TAG_call_site, DW_TAG_call_site_parameter,
	DW_TAG_skeleton_unit, DW_TAG_immutable_type. Add reserved comments
	for currently unused numbers.

2017-07-25  Mark Wielaard  <mark@klomp.org>

	* dwarf.h (DWARF attributes enum): Remove DW_AT_subscr_data,
	DW_AT_element_list and DW_AT_member. Add DWARF5 attribute constants.
	(DW_AT_subscr_data, DW_AT_element_list, DW_AT_member): New defines.

2017-07-21  Mark Wielaard  <mark@klomp.org>

	* dwarf_line_file.c: New file.
	* Makefile.am (libdw_a_SOURCES): Add dwarf_line_file.c.
	* libdw.h (dwarf_line_file): New function declaration.
	* libdw.map (ELFUTILS_0.170): New. Add dwarf_line_file.

2017-02-17  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Add libdw_so_LIBS to specify the archives libdw is is
	made of, libdw_so_DEPS for libraries it depends on (including
	libeu.a), libdw_so_LDLIBS to specify libraries libdw links against.
	(libdw.so$(EXEEXT)): Add $(libdw_so_LDLIBS), remove enumeration of
	library dependencies, use libdw_so_LIBS rather than relying on the
	order of dependencies specified, add -z,relro.

2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>

	* libdw.h: Remove attribute macro declarations and use
	__noreturn_attribute__ as defined in libelf.h.

2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>

	* dwarf_begin_elf.c: Include endian.h.

2017-03-30  Mark Wielaard  <mjw@redhat.com>

	* dwarf_peel_type.c (dwarf_peel_type): Call dwarf_attr_integrate on
	result.

2016-10-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Correct spelling of DW_LANG_PLI. Add compatibility define.
	* dwarf_aggregate_size.c (array_size): Use correct spelling of
	DW_LANG_PLI.

2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* cfi.c (execute_cfi): Add fallthrough comments.